[Style] SASS :bug: fixed stretching problem for footer links in main page

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -91,7 +91,7 @@ ul {
         border: solid hotpink;
     }
     &__ul {
-        border: solid black;
+        border: solid gold;
     }
     &__li {
         border: solid blue;
@@ -737,6 +737,7 @@ ul {
       align-self: stretch;
   margin: 0px;
   padding: 0px;
+  width: 280px;
 }
 
 .footer__li {
@@ -751,9 +752,9 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -773,7 +774,7 @@ ul {
   font-weight: bold;
   width: 160px;
   text-align: left;
-  padding-right: 97px;
+  padding-right: 100px;
 }
 
 .footer__nrml-lk {
