--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -73,7 +73,7 @@ ul {
         border: solid hotpink;
     }
     &__ul {
-        border: solid black;
+        border: solid gold;
     }
     &__li {
         border: solid blue;
